# powershell-script

./: Cargo.toml  LICENSE.md  README.md
examples/create_shortcut/: main.rs  script.ps
examples/hello/: main.rs
src/: builder.rs  error.rs  lib.rs  output.rs  target.rs
tests/hello/: main.rs
